# ml-project-template-philips

./: .gitignore  Dockerfile  Dockerfile.rootless  LICENSE  README.md  docker_build.ps1  docker_build.sh  docker_dev.sh  docker_run.ps1  docker_run.sh  docker_start.ps1  docker_start.sh  docker_start_interactive.sh  docker_start_noninteractive.sh  docker_train.sh  docker_update.sh  environment.yaml  init.sh  pip_install.sh  pyproject.toml  requirements.txt  set_jupyter_password.py  setup.cfg  setup.py  setup_cisco_proxy.sh  setup_philips_proxy.sh
docs/: VSCODE.md  WINDOWS_DOCKER_GPU.md
notebooks/: notebook_example.ipynb
src/mlproject/: main.py
src/mlproject/package0/: hello.py
